--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title></title>
 </head>
 <body>
-  <a href="http://git-scm.com/">git</a>
+  <div><a href="http://git-scm.com/">git</a></div>
 </body>
 </html>
